@@ -301,6 +301,9 @@ int parseSpec(Spec *specp, char *specFile, char *buildRoot,
     }
     addMacro(&globalMacroContext, "_docdir", NULL, "%{_defaultdocdir}", RMIL_SPEC);
     spec->inBuildArchitectures = inBuildArch;
+    spec->anyarch = anyarch;
+    spec->force = force;
+
     if (passPhrase) {
 	spec->passPhrase = strdup(passPhrase);
     }
@@ -326,11 +329,11 @@ int parseSpec(Spec *specp, char *specFile, char *buildRoot,
     while (parsePart != PART_NONE) {
 	switch (parsePart) {
 	  case PART_PREAMBLE:
-	    parsePart = parsePreamble(spec, initialPackage, anyarch);
+	    parsePart = parsePreamble(spec, initialPackage);
 	    initialPackage = 0;
 	    break;
 	  case PART_PREP:
-	    parsePart = parsePrep(spec, force);
+	    parsePart = parsePrep(spec);
 	    break;
 	  case PART_BUILD:
 	  case PART_INSTALL:
