@@ -88,7 +88,7 @@ static struct poptOption optionsTable[] = {
  { "buildos", '\0', POPT_ARG_STRING, &os, GETOPT_BUILDOS,	NULL, NULL},
  { "buildplatform", '\0', POPT_ARG_STRING, 0, GETOPT_BUILDPLATFORM, NULL, NULL},
  { "buildroot", '\0', POPT_ARG_STRING, 0, GETOPT_BUILDROOT,	NULL, NULL},
- { "checksig", 'K', 0, 0, 'K', NULL, NULL,	NULL, NULL},
+ { "checksig", 'K', 0, 0, 'K',			NULL, NULL},
  { "clean", '\0', 0, &clean, 0,			NULL, NULL},
  { "dbpath", '\0', POPT_ARG_STRING, 0, GETOPT_DBPATH,		NULL, NULL},
  { "erase", 'e', 0, 0, 'e',			NULL, NULL},
@@ -117,7 +117,7 @@ static struct poptOption optionsTable[] = {
  { "oldpackage", '\0', 0, &oldPackage, 0,	NULL, NULL},
  { "percent", '\0', 0, &showPercents, 0,	NULL, NULL},
  { "pipe", '\0', POPT_ARG_STRING, &pipeOutput, 0,	NULL, NULL},
- { "prefix", '\0', POPT_ARG_STRING, &prefix, 0,		NULL, NULL},
+ { "prefix", '\0', POPT_ARG_STRING, &prefix, 0,	NULL, NULL},
  { "query", 'q', 0, NULL, 'q',			NULL, NULL},
  { "querytags", '\0', 0, &queryTags, 0,		NULL, NULL},
  { "quiet", '\0', 0, &quiet, 0,			NULL, NULL},
